Bugfix: Remove text-shadow on active search button
This was hard to read on non-overly bright monitors.

--- a/sites/all/themes/genesis/genesis_mcneese/css/layout.css
+++ b/sites/all/themes/genesis/genesis_mcneese/css/layout.css
@@ -103,6 +103,8 @@ div#block-search-form form#search-block-form input#edit-submit {
 div#block-search-form form#search-block-form input#edit-submit:hover {
   color: #00477f;
   background: #fad703;
+
+  text-shadow: none;
 }
 
 
